objects/vlocity_ins__ProductChildItem__c.object
<CustomObject>
    <description>Represents relationships between parent insurance products (such as plan types and policy types) and its child component specifications including coverages, insured parties and insured items. When insurance products are quoted, the child items are automatically added to the cart. Child object of Product (Product2).</description>
    <fields>
        <fullName>vlocity_ins__AllowIndependentLifeCycle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies child items and its hierarchy (if any) whose asset lifecycle can be managed independently from the root level offer.</description>
        <label>Allow Independent Life Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ChildLineNumber__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ChildProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Child Items (Child)</relationshipLabel>
        <relationshipName>ProductChildItemsChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ChildRecordType__c</fullName>
        <formula>vlocity_ins__ChildProductId__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CollapseHierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to identify if the child products below this level should be collapsed or expanded.</description>
        <label>Collapse Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageCalculationFormula__c</fullName>
        <label>Coverage Calculation Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultSelectedCriteriaComments__c</fullName>
        <label>Default Selected Criteria Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultSelectedCriteria__c</fullName>
        <label>Default Selected Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EligibilityCriteriaComments__c</fullName>
        <label>Eligibility Criteria Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EligibilityCriteria__c</fullName>
        <label>EligibilityCriteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Product Child Item. Used to identify the Product Child Item across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Product Child Item identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRootProductChildItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to identify the root product child item record.
Only one will be allowed for each root product.</description>
        <label>Is Root Product Child Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsVirtualItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxQuantity__c</fullName>
        <defaultValue>99999</defaultValue>
        <description>Maximum quantity for this product in the line item</description>
        <label>Max Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaximumChildItemQuantity__c</fullName>
        <defaultValue>99999</defaultValue>
        <label>Max Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinMaxDefaultQty__c</fullName>
        <formula>TEXT(vlocity_ins__MinQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_ins__MaxQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_ins__Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min, Max, Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum quantity for this product in the line item.</description>
        <label>Min Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinimumChildItemQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Child Items</relationshipLabel>
        <relationshipName>ProductChildItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingFormula__c</fullName>
        <label>Pricing Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingSource__c</fullName>
        <label>Pricing Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipType__c</fullName>
        <label>RelationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Realization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequiredCriteriaComments__c</fullName>
        <label>Required Criteria Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequiredCriteria__c</fullName>
        <label>Required Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SelectValidationCriteria__c</fullName>
        <label>Select Validation Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SelectValidationMessage__c</fullName>
        <label>Select Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SelectionMethodImplementation__c</fullName>
        <label>Selection Method Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SeqNumber__c</fullName>
        <formula>VALUE(vlocity_ins__ChildLineNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SeqNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubParentSpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Child Items (Sub Parent Product)</relationshipLabel>
        <relationshipName>ProductChildItems_subParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalCoverageCalculationFormula__c</fullName>
        <label>Total Coverage Calculation Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Child Item</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Child Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__ChildProductNonAssetizeRule</fullName>
        <active>true</active>
        <description>Non Assetizable Product can only have Non Assetizable children</description>
        <errorConditionFormula>(vlocity_ins__ParentProductId__r.vlocity_ins__IsNotAssetizable__c &amp;&amp;  !vlocity_ins__ChildProductId__r.vlocity_ins__IsNotAssetizable__c )</errorConditionFormula>
        <errorMessage>Cannot add Assetizable Child Product to a Non Assetizable Parent Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Default_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__Quantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Default_greater_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinQuantity__c  &gt;  vlocity_ins__Quantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Default_less_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__Quantity__c  &gt;  vlocity_ins__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Max_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MaxQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Max_less_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MaxQuantity__c  &lt;  vlocity_ins__MinQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Min_child_greater_than_Max_child_item</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinimumChildItemQuantity__c &gt;  vlocity_ins__MaximumChildItemQuantity__c</errorConditionFormula>
        <errorMessage>Min Children Quantity must be less than or equal to Max Children Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Min_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Min_greater_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinQuantity__c  &gt;  vlocity_ins__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__ParentProduct_cannot_be_ChildProduct</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__ParentProductId__c == vlocity_ins__ChildProductId__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__ChildProductId__c</errorDisplayField>
        <errorMessage>Parent Product cannot be added as Child Product</errorMessage>
    </validationRules>
</CustomObject>